[tool.poetry]
name = "webwhiz"
version = "0.1.0"
description = "Allows the user to provide a list of website links and the lets the user interact with an AI Assistant regarding the information contained on those pages."
authors = ["kamran945 <kamran945@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
python-dotenv = "^1.0.1"
chromadb = "^0.5.0"
tiktoken = "^0.7.0"
sentence-transformers = "^3.0.0"
bs4 = "^0.0.2"
firecrawl-py = "^0.0.13"
wikipedia = "^1.4.0"
tavily-python = "^0.3.3"
langchain = "^0.3.4"
langchain-groq = "^0.2.0"
langchain-community = "^0.3.4"
chardet = "^5.2.0"
langchain-huggingface = "^0.1.1"
langchain-chroma = "^0.1.4"
langchain-openai = "^0.2.5"
streamlit = "^1.39.0"
setuptools = "^75.3.0"
langchain-core = "^0.3.15"
unstructured = "^0.16.4"
faiss-cpu = "^1.9.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 
